--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Example user template template
-.idea
-*.iml
-out
-gen
-node_modules
+# Specifies intentionally untracked files to ignore when using Git
+# http://git-scm.com/docs/gitignore
+
+node_modules/
+platforms/
+plugins/
